<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">密码管理器</string>
    <string name="app_about">密码管理器 v1.0</string>
    <string name="app_copyright">Copyright &#169; 2013 - By Gary</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_string">ABCDEFGHIJKL</string>
    <string name="btn_generator">Generate</string>
    <string name="btn_save">Save</string>
    
    <string name="label_password_length">Password Length</string>
    <string name="label_password_category">Password Category</string>
    
    <string name="label_password_category_u">Uppercase characters(A through Z)</string>
    <string name="label_password_category_l">Lowercase characters(a through z)</string>
    <string name="label_password_category_d">Base 10 digits (0 through 9)</string>
    <string name="label_password_category_non">Non-alphabetic characters</string>

    <color name="color_lightblue">#3399FF</color>

</resources>