<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordWinActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/label_password_length" />

    <Spinner
        android:id="@+id/spinnerPwdLen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerPwdLen"
        android:layout_below="@+id/spinnerPwdLen"
        android:text="@string/label_password_category"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/cbxUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/label_password_category_u" />

    <CheckBox
        android:id="@+id/cbxLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/cbxUpper"
        android:text="@string/label_password_category_l" />

    <CheckBox
        android:id="@+id/cbxDigit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/cbxLower"
        android:text="@string/label_password_category_d" />

    <CheckBox
        android:id="@+id/cbxNonAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/cbxDigit"
        android:text="@string/label_password_category_non" />

    <Button
        android:id="@+id/btnGenerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbxNonAlpha"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/btn_generator"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnGenerator"
        android:layout_alignBottom="@+id/btnGenerator"
        android:layout_alignRight="@+id/cbxLower"
        android:text="@string/btn_save"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbxNonAlpha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/dummy_string"
        android:textSize="35sp" />

</RelativeLayout>